[package]
name = "graphslamrs"
version = "0.0.4"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "graphslamrs"
crate-type = ["cdylib"]
build = "build.rs"

[dependencies]
finitediff = "0.1.4"
itertools = "0.13.0"
nalgebra = "0.33.2"
ndarray = "0.16.1"
pyo3 = "0.22.0"
rsparse = "1.0.0"
sprs = "0.11.2"
sprs-ldl = "0.10.0"


[build-dependencies]
bindgen = "0.65.1"
cc = "1.0.46"
